# nextgenvdr

./: .env.example  .gitignore  README.md  check_db.py  check_documents.py  check_users.py  debug_questions.py  decode_company_info.py  get_latest_question.py  test_company_info.txt  test_create_questions.py  test_document_preview.py  test_mock_upload.py  test_modal.html  upload_mock_files.py
Virtual Data Room/: package.json  pnpm-lock.yaml
Virtual Data Room/app/: page.tsx
Virtual Data Room/components/: auth-guard.tsx  auth-provider.tsx  buyer-dashboard.tsx  buyer-qa-interface.tsx  dashboard.tsx  document-list.tsx  document-provider.tsx  document-question-router.tsx  document-related-questions.tsx  document-upload.tsx  header.tsx  login-form.tsx  question-document-suggestions.tsx  question-form.tsx  question-list.tsx  question-provider.tsx  question-response-form.tsx  seller-dashboard.tsx  seller-response-dashboard.tsx  smart-question-view.tsx
backend/: auth.py  crud.py  database.py  main.py  pyproject.toml  requirements.txt  seed_questions.py  start.py
backend/models/: models.py  schemas.py
backend/routers/: ai.py  auth.py  documents.py  questions.py
backend/services/: agentic_rag.py  document_processor.py  openai_service.py  qa_automation.py  question_processor.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: add-user-modal.tsx  answer-collapsible.tsx  breadcrumb-nav.tsx  bulk-upload-zone.tsx  chatbot.tsx  document-preview-modal.tsx  (+11 more)
my-v0-project/: package.json  pnpm-lock.yaml
(+49 files in other folders)
