[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.12.1",
    "email-validator==2.2.0",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "langchain-core>=0.3.0",
    "numpy<2.0.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.1.0",
    "openai>=1.58.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.7.4",
    "pypdf>=5.0.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "tiktoken>=0.7.0",
    "uvicorn[standard]==0.24.0",
]
